# RL-mars-rover

./: .gitignore  00-problem-statement.md  03-project-plan.md  04-terrain-and-simulation-environment.md  README.md  pyproject.toml
docs/: 01-project-description.md  02-thesis.md  05-comparison-to-ernest.md  06-mapping.md
research-docs/: MarsSimulationReasearch.md  initial-research-report.md  similar-papers-research.md
scripts/: manual_drive.py  random_rollout.py  train_ppo_flat.py  view_rover.py  watch_ppo_flat.py
src/marsnav/: __init__.py  control.py  model.py
src/marsnav/assets/: rover.xml
src/marsnav/baselines/: __init__.py
src/marsnav/envs/: __init__.py  rover_nav.py
src/marsnav/eval/: __init__.py  random_rollout.py
src/marsnav/train/: __init__.py  ppo_flat.py
src/marsnav/utils/: __init__.py  timing.py
tests/: test_env.py  test_ppo_flat.py  test_random_rollout.py  test_rover.py
