[project]
name = "marsnav"
version = "0.1.0"
description = "Cheap, Confident Navigation for Mars Rovers — Learned vs. Planned"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.2",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "numpy>=1.26",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marsnav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
